# maven/dev.galasa.scheduler.jpa/src/main/java/dev/galasa/scheduler/jpa/LevelEntity.java
@@ -1,38 +1,38 @@
 package dev.galasa.scheduler.jpa;
 
 import java.io.Serializable;
-import java.util.List;
 
-import javax.persistence.CascadeType;
 import javax.persistence.Column;
 import javax.persistence.Entity;
 import javax.persistence.FetchType;
 import javax.persistence.Id;
+import javax.persistence.JoinColumn;
 import javax.persistence.Lob;
-import javax.persistence.OneToMany;
+import javax.persistence.ManyToOne;
 import javax.persistence.Table;
 import javax.persistence.Version;
 
 @Entity
-@Table(name = "app")
-public class AppEntity implements Serializable {
+@Table(name = "level")
+public class LevelEntity implements Serializable {
 	private static final long serialVersionUID = 1L;
 	
 	@Id
 	@Column(name = "id", length = 10)
 	private String id;
 	
+	@ManyToOne(fetch = FetchType.LAZY)
+	@JoinColumn(name = "app_id")
+	private AppEntity app;
+	
 	@Lob
 	@Column(name = "configuration")
 	private String configuration;
 	
-	@OneToMany(mappedBy = "app", fetch = FetchType.LAZY, cascade = CascadeType.ALL)
-	private List<LevelEntity> levels;
-	
 	@Version
 	private long version;
 	
-	public AppEntity() {
+	public LevelEntity() {
 	}
 
 	public String getId() {
@@ -51,11 +51,8 @@ public class AppEntity implements Serializable {
 		this.configuration = configuration;
 	}
 	
-	public List<LevelEntity> getLevels() {
-		return this.levels;
+	public AppEntity getApp() {
+		return this.app;
 	}
-	
-	public void addLevel(LevelEntity level) {
-		this.levels.add(level);
-	}
+
 }
